--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <main class="main-content">
             <div class="exam-title">
-                <h1><center>Agri English Practice Test</center></h1>
-                <span><center>100 Questions | 60 Minutes</center></span>
+                <h1><center>Integration Exam</center></h1>
+                <span><center>30 Questions | 25 Minutes</center></span>
             </div>
 
             <!-- Start Exam Button -->
